# contract-testing

./: README.md  pact-broker.yml  pyproject.toml
ms-tags/: main.py
ms-tags/tests/: test_provider_contract.py
ms-tasks/: main.py
ms-tasks/tests/: test_consumer_contract.py
ms-tasks/tests/pacts/: ms-tasks-ms-tags.json
